dripmail-sf/force-app/main/default/objects/DNSTokens__c/DNSTokens__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The DNS Tokens required for verifying a Domain as a sending domain</description>
    <label>DNS Tokens</label>
</CustomObject>