dripmail-sf/force-app/main/default/objects/DNSTokens__c/fields/Domain_Id__c.field-meta.xml
<CustomField>
    <fullName>Domain_Id__c</fullName>
    <description>The Id of the associated Salesforce Domain Object</description>
    <label>Domain Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>