dripmail-sf/force-app/main/default/objects/DNSTokens__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The status of this particular DNS Token. (Enum: [Pending, Completed, ...])</description>
    <label>Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>