dripmail-sf/force-app/main/default/objects/DNSTokens__c/fields/Token_Name__c.field-meta.xml
<CustomField>
    <fullName>Token_Name__c</fullName>
    <description>The value to be used for &#39;name&#39; when creating the DNS record</description>
    <label>Token Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>