dripmail-sf/force-app/main/default/objects/DNSTokens__c/fields/Token_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Token_Purpose__c</fullName>
    <description>The purpose of this token, such as Verification or DKIM</description>
    <label>Token Purpose</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>