dripmail-sf/force-app/main/default/objects/DNSTokens__c/fields/Token_Type__c.field-meta.xml
<CustomField>
    <fullName>Token_Type__c</fullName>
    <description>The type of the DNS record to be created</description>
    <label>Token Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>