dripmail-sf/force-app/main/default/objects/DNSTokens__c/fields/Token_Value__c.field-meta.xml
<CustomField>
    <fullName>Token_Value__c</fullName>
    <description>To be used as the &#39;value&#39; of the DNS record getting created</description>
    <label>Token Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>